--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+prost = "0.11.9"
+prost-types = "0.11.9"
+tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
+tonic = { version = "0.9.2", features = ["tls", "transport" ] }
+
+[build-dependencies]
+tonic-build = "0.9.2"
